<resources>
    <string name="app_name">Calendar</string>
    <string name="LoginPageTitle">Cadastro</string>
    <string name="full_name">Nome Completo</string>
    <string name="user_name">Nome de Usuário</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirme a Senha</string>
    <string name="alredy_registred">Ja possui uma conta?</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_up">Inscrever-se</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
