<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="@color/colorPrimary"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Cadastrar"
            android:gravity="center"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="360dp"

        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.487" android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" android:orientation="vertical"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/full_name"
            android:padding="5dp"
            android:inputType="text"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="#c1c8c9"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_input"
            style="@style/InputText"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/email"
            android:padding="5dp"
            android:textColor="#000000"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:textColorHint="#c1c8c9"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_input"
            style="@style/InputText"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="#c1c8c9"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_input"
            style="@style/InputText"
            />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="#000000"
            android:textColorHint="#c1c8c9"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_input"
            style="@style/InputText"
            />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="#000000"
                android:text="@string/alredy_registred"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#000000"
                android:text="@string/sign_in"
                android:onClick="navigateLoginOnClick"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:onClick="buttonListener"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@color/colorPrimaryLight" android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>